<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text"><g id="app_name">%1$s</g>" won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text_phone"><g id="app_name">%1$s</g>" won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet"><g id="app_name">%1$s</g>" won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue"><g id="app_name">%1$s</g> is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text"><g id="app_name">%1$s</g> relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text"><g id="app_name">%1$s</g>" won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text"><g id="app_name">%1$s</g>" won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="account_type_adult">Adult</string>
    <string name="account_type_child">Child</string>
    <string name="account_type_parent">Parent</string>
    <string name="app_name"><g id="cloudpets_brand">CloudPets</g> 2 Free</string>
    <string name="badge_approved">Approved</string>
    <string name="badge_needs_approval">Needs Approval</string>
    <string name="badge_new">new!</string>
    <string name="brand_cloud_pets"><g id="cloudpets_brand">CloudPets</g></string>
    <string name="btn_accept">Accept</string>
    <string name="btn_add_profile">Add Profile</string>
    <string name="btn_approve_message">"Approve and send to child's inbox"</string>
    <string name="btn_buy_a_cloudpet">Buy the Premium APP!</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_connect_your_cloudpet">Connect your <g id="cloudpet_toy_brand">CloudPet</g></string>
    <string name="btn_continue">Continue</string>
    <string name="btn_create_account">Create Account</string>
    <string name="btn_create_child_profile">Create Child Profile</string>
    <string name="btn_decline">Decline</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_delete_now">Delete Now</string>
    <string name="btn_delete_profile">Delete</string>
    <string name="btn_discard_changes">Discard Changes</string>
    <string name="btn_done">Done</string>
    <string name="btn_dont_have_cloudpet">"I don't have a "<g id="cloudpet_toy_brand">CloudPet</g></string>
    <string name="btn_exit_game">Exit Game</string>
    <string name="btn_exit_story">Exit Story</string>
    <string name="btn_forgot_password">Forgot Password?</string>
    <string name="btn_have_cloudpet">I have a <g id="cloudpet_toy_brand">CloudPet</g></string>
    <string name="btn_invite_friend">Invite Friends</string>
    <string name="btn_log_in">Log In</string>
    <string name="btn_log_out">Log Out</string>
    <string name="btn_manage_profiles">Manage Users</string>
    <string name="btn_manage_settings">Settings</string>
    <string name="btn_more">More</string>
    <string name="btn_next">Next</string>
    <string name="btn_next_toy">No</string>
    <string name="btn_no">No</string>
    <string name="btn_okay">OK</string>
    <string name="btn_open_games">Games</string>
    <string name="btn_open_lullabies">Sounds</string>
    <string name="btn_open_stories">Stories</string>
    <string name="btn_play_story">Read Story</string>
    <string name="btn_previous_toy">Previous</string>
    <string name="btn_record_message">Record Message</string>
    <string name="btn_reply">Reply</string>
    <string name="btn_request_location_permission">Set Location Permissions</string>
    <string name="btn_rerecord">Re-Record</string>
    <string name="btn_resend">Resend</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_retry">Retry</string>
    <string name="btn_save">Save</string>
    <string name="btn_select_recipients">Select Recipients</string>
    <string name="btn_send">Send</string>
    <string name="btn_send_lullaby">Send to <g id="cloudpet_toy_brand">CloudPet</g> &amp; Play</string>
    <string name="btn_send_message">Send Message</string>
    <string name="btn_send_to">Send to</string>
    <string name="btn_send_to_children">"Send message to child's inbox"</string>
    <string name="btn_send_to_children_retry">Retry sending message</string>
    <string name="btn_send_to_cloudpet">Send to <g id="cloudpet_toy_brand">CloudPet</g></string>
    <string name="btn_send_to_named_recipient">Send to <g id="recipient_name">%s</g></string>
    <string name="btn_show_messages">Message Center</string>
    <string name="btn_show_my_messages">Messages</string>
    <string name="btn_switch_profile">Switch Profile</string>
    <string name="btn_turn_bluetooth_on">Turn Bluetooth On</string>
    <string name="btn_tutorial">Tutorial</string>
    <string name="btn_unapprove_message">"Un-approve and remove from child's inbox"</string>
    <string name="btn_use_toy">Yes</string>
    <string name="btn_view_permissions">View Permissions</string>
    <string name="btn_want_buy_cloudpet">I want to buy a <g id="cloudpet_toy_brand">CloudPet</g></string>
    <string name="btn_want_send_messages">"I want to send messages to
 a child with a "<g id="cloudpet_toy_brand">CloudPet</g></string>
    <string name="btn_yes">Yes</string>
    <string name="change_password">Change Password</string>
    <string name="child_message_from">from <g id="sender_name">%s</g></string>
    <string name="description_setting_password_protect_adult_dashboard">Require account password to access the Adult Dashboard</string>
    <string name="description_setting_require_message_approval">"Require your approval on each message before it is delivered to your child's inbox"</string>
    <string name="description_setting_use_child_pins">Setting summary here</string>
    <string name="empty_spinner_item">None</string>
    <string name="error_bluetooth_off_child_dashboard">Please turn Bluetooth on to use the Child Dashboard with your <g id="cloudpet_toy_brand">CloudPet</g>.</string>
    <string name="error_bluetooth_off_setup">Please turn bluetooth on to connect your <g id="cloudpet_toy_brand">CloudPet</g>.</string>
    <string name="error_connection_failed">There was a problem with your internet connection. Please check your connection and try again.</string>
    <string name="error_decode_audio_failed">An error occurred while reading the audio file. Please try again.</string>
    <string name="error_email_taken">An account already exists with this email address. Please login using this account or try another email address.</string>
    <string name="error_encode_audio_failed">An error occurred while writing the audio file. Please try again.</string>
    <string name="error_firmware_not_valid">There was a problem loading the firmware update.</string>
    <string name="error_friend_yourself">You cannot invite yourself to be friends with your own children. Please use another email address.</string>
    <string name="error_generic">Something has gone wrong. Please try again.</string>
    <string name="label_child_dash_help_ensure_connection">Make sure your <g id="cloudpet_toy_brand">CloudPet</g> is connected via bluetooth</string>
    <string name="label_child_dash_help_squeeze_to_start">Squeeze the red <g id="cloudpet_toy_brand">CloudPet</g> hand to start recording</string>
    <string name="label_child_dash_help_squeeze_to_stop">Squeeze the same hand again to stop recording</string>
    <string name="label_child_dash_help_tap_to_send">Tap Send To and select recipients</string>
    <string name="message_complete_connection_finished">Your <g id="cloudpet_toy_brand">CloudPet</g> is now connected!</string>
    <string name="message_complete_connection_started">Click on your <g id="cloudpet_toy_brand">CloudPet</g>"'s hand with Blue Button to confirm this is the right toy."</string>
    <string name="message_onboarding_get_started">Tap the button that describes you best.</string>
    <string name="message_scanning_error_no_toys">"We couldn't find a "<g id="cloudpet_toy_brand">CloudPet</g>".
 Please make sure the "<g id="cloudpet_toy_brand">CloudPet</g> is in range and turned ON.</string>
    <string name="title_complete_connection_finished">Connection Complete!</string>
    <string name="title_complete_connection_started">Complete The Connection</string>
    <string name="title_onboarding_hello">Hello!</string>
    <string name="title_pref_enable_adult_dashboard_background_music">Music - Adult Dashboard</string>
    <string name="title_pref_enable_child_dashboard_background_music">Music - Child Dashboard</string>
    <string name="title_pref_enable_child_dashboard_sounds">Sound Effects - Child Dashboard</string>
    <string name="title_scanning_error">Uh Oh!</string>
    <string name="title_send_recorded_message">"Would You Like
To Send This Message?"</string>
    <string name="tooltip_start_here">Start Here!</string>
    <string name="banner_ad_unit_id">ca-app-pub-6184197962257773/1040535042</string>
</resources>