<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="@dimen/default_heading_margin_top"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/title_container_complete_connection_started" android:background="@color/background_light_default" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/title_complete_connection_started" style="@style/OnboardingTitleText" />
            <TextView android:gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/message_complete_connection_started" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/title_container_complete_connection_finished" android:background="@color/background_light_default" android:layout_width="fill_parent" android:layout_height="wrap_content" android:alpha="0.0">
            <TextView android:gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/title_complete_connection_finished" style="@style/OnboardingTitleText" />
            <TextView android:gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/message_complete_connection_finished" />
        </LinearLayout>
    </FrameLayout>
    <Space android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.spiraltoys.cloudpets2.views.CircleImageView android:id="@id/connection_indicator" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="?pet_avatar" app:outer_border_color="@color/profile_photo_border" app:background_color="@color/avatar_background" />
        <TextView android:id="@id/connection_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/default_gap" />
    </LinearLayout>
    <Space android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
    <include layout="@layout/widget_onboarding_progress" />
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:enabled="false" android:id="@id/complete_connection_button" android:background="@drawable/button_primary" android:layout_width="0.0dip" android:layout_height="64.0dip" android:text="@string/btn_done" android:layout_weight="1.0" style="@style/BorderlessButtonStyle" />
    </LinearLayout>
</LinearLayout>