<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:tag="layout/activity_adult_dashboard_0" android:background="@drawable/gradient_bg_half" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="-24.0dip" android:fillViewport="true" android:layout_above="@id/buy_a_cloudpet_button" android:layout_below="@id/toolbar_clouds">
        <RelativeLayout android:gravity="center" android:orientation="vertical" android:paddingTop="48.0dip" android:clipChildren="false" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <FrameLayout android:clipChildren="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/adult_dashboard_tooltip_margin_horizontal" android:layout_marginTop="0.0dip" android:layout_alignLeft="@id/button_panel" android:layout_alignTop="@id/button_panel">
                <TextView android:textColor="@android:color/white" android:gravity="center_horizontal" android:id="@id/tooltip" android:background="@drawable/tooltip" android:paddingLeft="8.0dip" android:paddingTop="3.0dip" android:paddingRight="9.0dip" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tooltip_start_here" android:rotation="-5.0" fontPath="fonts/merge_bold.otf" />
            </FrameLayout>
            <android.support.v7.widget.GridLayout android:id="@id/button_panel" android:paddingTop="@dimen/activity_vertical_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:clipChildren="false" android:layout_width="wrap_content" android:layout_height="wrap_content" app:rowCount="2" app:columnCount="2">
                <android.support.design.widget.FloatingActionButton android:id="@id/record_message_button" android:layout_marginLeft="@dimen/adult_dashboard_fab_margin_horizontal" android:layout_marginRight="@dimen/adult_dashboard_fab_margin_horizontal" android:src="@drawable/button_record_bordered" app:elevation="4.0dip" app:rippleColor="@color/ripple_material_dark" app:layout_gravity="center" app:backgroundTint="@color/button_bg_record" style="@style/AppTheme.FloatingActionButton.LowElevation" />
                <FrameLayout android:clipChildren="false" app:layout_gravity="center|bottom">
                    <android.support.design.widget.FloatingActionButton android:id="@id/show_messages_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/button_messages_bordered" app:elevation="4.0dip" app:rippleColor="@color/ripple_material_dark" app:backgroundTint="@color/button_bg_messages" style="@style/AppTheme.FloatingActionButton.LowElevation" />
                    <TextView android:textSize="@dimen/abc_text_size_caption_material" android:textColor="@color/app_bar_light_default" android:gravity="center" android:layout_gravity="end" android:id="@id/message_count" android:background="@drawable/badge_count" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:minWidth="@dimen/count_badge_min_width" android:minHeight="@dimen/count_badge_min_width" />
                </FrameLayout>
                <TextView android:text="@string/btn_record_message" style="@style/AdultDashboardFabButtonLabel" />
                <TextView android:text="@string/btn_show_messages" style="@style/AdultDashboardFabButtonLabel" />
                <FrameLayout android:clipChildren="false" app:layout_gravity="center|bottom">
                    <android.support.design.widget.FloatingActionButton android:id="@id/manage_profiles_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/button_manage_users_bordered" app:rippleColor="@color/ripple_material_dark" app:borderWidth="0.0dip" app:layout_gravity="center" app:backgroundTint="@color/button_bg_manage_users" style="@style/AppTheme.FloatingActionButton.LowElevation" />
                    <TextView android:textSize="@dimen/abc_text_size_caption_material" android:textColor="@color/app_bar_light_default" android:gravity="center" android:layout_gravity="end" android:id="@id/invite_count" android:background="@drawable/badge_count" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:minWidth="@dimen/count_badge_min_width" android:minHeight="@dimen/count_badge_min_width" />
                </FrameLayout>
                <android.support.design.widget.FloatingActionButton android:id="@id/manage_settings_button" android:layout_marginLeft="@dimen/adult_dashboard_fab_margin_horizontal" android:layout_marginTop="@dimen/adult_dashboard_fab_margin_vertical" android:layout_marginRight="@dimen/adult_dashboard_fab_margin_horizontal" android:src="@drawable/button_settings_bordered" app:rippleColor="@color/ripple_material_dark" app:layout_gravity="center" app:backgroundTint="@color/button_bg_settings" style="@style/AppTheme.FloatingActionButton.LowElevation" />
                <TextView android:text="@string/btn_manage_profiles" style="@style/AdultDashboardFabButtonLabel" />
                <TextView android:text="@string/btn_manage_settings" style="@style/AdultDashboardFabButtonLabel" />
            </android.support.v7.widget.GridLayout>
        </RelativeLayout>
    </ScrollView>
    <Button android:id="@id/buy_a_cloudpet_button" android:background="@drawable/button_primary" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/default_button_height" android:text="@string/btn_buy_a_cloudpet" android:layout_alignParentBottom="true" android:paddingStart="@dimen/abc_action_bar_content_inset_material" android:paddingEnd="@dimen/abc_action_bar_content_inset_material" style="@style/BorderlessButtonStyle" />
    <com.google.android.gms.ads.AdView android:id="@id/ad_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" app:adSize="BANNER" app:adUnitId="@string/banner_ad_unit_id" />
    <View android:id="@id/floating_menu_underlay" android:background="@color/fab_menu_overlay" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:alpha="0.0" />
    <FrameLayout android:id="@id/toolbar_clouds" android:tag="binding_1" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <include layout="@layout/toolbar_onboarding" />
    </FrameLayout>
    <FrameLayout android:id="@id/profile_picker_container" android:clickable="false" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="-84.0dip" android:layout_below="@id/toolbar_clouds" />
    <ImageButton android:id="@id/tutorial_button" android:background="?selectableItemBackgroundBorderless" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="-40.0dip" android:layout_marginRight="@dimen/activity_horizontal_margin" android:src="@drawable/button_tutorial" android:layout_below="@id/toolbar_clouds" android:layout_alignParentRight="true" android:contentDescription="@string/btn_tutorial" />
    <FrameLayout android:id="@id/fragment_container" android:layout_width="fill_parent" android:layout_height="fill_parent" />
</RelativeLayout>