<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:tag="layout/fragment_child_dashboard_help_send_0" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.GridLayout android:paddingTop="@dimen/abc_dialog_list_padding_vertical_material" android:layout_width="fill_parent" android:layout_height="wrap_content" app:columnCount="2">
        <ImageView android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material" android:paddingRight="@dimen/abc_list_item_padding_horizontal_material" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/popup_bluetooth" app:layout_gravity="center" />
        <TextView android:gravity="center_vertical" android:paddingRight="@dimen/abc_list_item_padding_horizontal_material" android:layout_width="0.0dip" android:minHeight="@dimen/list_item_height_double" android:text="@string/label_child_dash_help_ensure_connection" android:lines="2" app:layout_columnWeight="1.0" app:layout_gravity="fill" />
        <ImageView android:background="?android:listDivider" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_columnSpan="2" app:layout_gravity="fill_horizontal" />
        <ImageView android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material" android:paddingRight="@dimen/abc_list_item_padding_horizontal_material" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/popup_record_icon" app:layout_gravity="center" />
        <TextView android:gravity="center_vertical" android:paddingRight="@dimen/abc_list_item_padding_horizontal_material" android:layout_width="0.0dip" android:minHeight="@dimen/list_item_height_double" android:text="@string/label_child_dash_help_squeeze_to_start" android:lines="3" app:layout_columnWeight="1.0" app:layout_gravity="fill" />
        <ImageView android:background="?android:listDivider" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_columnSpan="2" app:layout_gravity="fill_horizontal" />
        <ImageView android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material" android:paddingRight="@dimen/abc_list_item_padding_horizontal_material" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/popup_record_icon" app:layout_gravity="center" />
        <TextView android:gravity="center_vertical" android:paddingRight="@dimen/abc_list_item_padding_horizontal_material" android:layout_width="0.0dip" android:minHeight="@dimen/list_item_height_double" android:text="@string/label_child_dash_help_squeeze_to_stop" android:lines="3" app:layout_columnWeight="1.0" app:layout_gravity="fill" />
        <ImageView android:background="?android:listDivider" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_columnSpan="2" app:layout_gravity="fill_horizontal" />
        <ImageView android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material" android:paddingRight="@dimen/abc_list_item_padding_horizontal_material" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/popup_select_recipient" app:layout_gravity="center" />
        <TextView android:gravity="center_vertical" android:paddingRight="@dimen/abc_list_item_padding_horizontal_material" android:layout_width="0.0dip" android:minHeight="@dimen/list_item_height_double" android:text="@string/label_child_dash_help_tap_to_send" android:lines="3" app:layout_columnWeight="1.0" app:layout_gravity="fill" />
        <ImageView android:background="?android:listDivider" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_columnSpan="2" app:layout_gravity="fill_horizontal" />
    </android.support.v7.widget.GridLayout>
</FrameLayout>